--- a/cacador-de-cep/index.html
+++ b/cacador-de-cep/index.html
@@ -6,6 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Caça CEP</title>
+    <style>
+      body {
+        background-image: url("https://i.pinimg.com/originals/51/c2/95/51c295382dfc5fabd42860971936615f.gif");
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
